services/aredn-piaware/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aredn-piaware
  namespace: aredn-piaware
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-piaware
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: piaware
            app.kubernetes.io/instance: piaware
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
      toPorts:
      - ports:
          - port: "5621"
            protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: aredn-piaware
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn-piaware
